--- a/DS&ML_project.ipynb
+++ b/DS&ML_project.ipynb
@@ -6,7 +6,7 @@
       "name": "DS&ML_project.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMcjQEkU1mTvPEeTW6peD5K",
+      "authorship_tag": "ABX9TyPiiawxHYNjugOQ7Ls3x3Pi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2248,9 +2248,8 @@
       "source": [
         "Project done by -\n",
         "\n",
-        "> #  **Abhijeet Arun Dhumal**\n",
-        "\n",
-        "\n",
+        "> #  **Abhijeet Dhumal**\n",
+        "> #  **Pankaj Patil**\n",
         "\n",
         "\n"
       ],
